# HaskellGraphs

./: .gitignore  HaskellGraphs.cabal  README.md  input.txt  input2.txt  stack.yaml  toolsinput.txt
app/: MinSpanningTree.hs  ShortestPath.hs  ToolsRunner.hs
src/: ComplexGraphs.hs  SimpleGraphs.hs  Tools.hs
