name:                HaskellGraphs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HaskellGraphs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleGraphs
                     , ComplexGraphs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , fgl
  default-language:    Haskell2010

executable find-shortest-path
  hs-source-dirs:      app
  main-is:             ShortestPath.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HaskellGraphs
  default-language:    Haskell2010

executable find-mst
  hs-source-dirs:      app
  main-is:             MinSpanningTree.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HaskellGraphs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/HaskellGraphs
